tests/ui/use/use-after-move-based-on-type.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/use-after-move-based-on-type.rs:4:20
   |
LL |     let x = "Hello!".to_string();
   |         - move occurs because `x` has type `String`, which does not implement the `Copy` trait
LL |     let _y = x;
   |              - value moved here
LL |     println!("{}", x);
   |     ---------------^-
   |     |              |
   |     |              value borrowed here after move
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let _y = x.clone();
   |               ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
